--- a/BIN/manifest_KEI1.json
+++ b/BIN/manifest_KEI1.json
@@ -1,18 +1,23 @@
 {
-    "main": {
-      "url": "https://raw.githubusercontent.com/KEI4251/KEI-ESP32-JAMMER/BIN/ESP32_JAMMER_BY_KEI.ino.bin",
-      "size": 0,
-      "flash_size": "4MB"
-    },
-    "bootloader": {
-      "url": "https://raw.githubusercontent.com/KEI4251/KEI-ESP32-JAMMER/BIN/ESP32_JAMMER_BY_KEI.bootloader.bin",
-      "size": 0,
-      "flash_size": "1MB"
-    },
-    "partitions": {
-      "url": "https://raw.githubusercontent.com/KEI4251/KEI-ESP32-JAMMER/BIN/ESP32_JAMMER_BY_KEI.partitions.bin",
-      "size": 0,
-      "flash_size": "1MB"
+  "name": "KEI Jammer",
+  "version": "1.0",
+  "builds": [
+    {
+      "chipFamily": "ESP32",
+      "parts": [
+        {
+          "path": "https://raw.githubusercontent.com/KEI4251/ESP32-Jammer-/main/BIN/ESP32_JAMMER_BY_KEI2.ino.bootloader.bin",
+          "offset": "0x1000"
+        },
+        {
+          "path": "https://raw.githubusercontent.com/KEI4251/ESP32-Jammer-/main/BIN/ESP32_JAMMER_BY_KEI2.ino.partitions.bin",
+          "offset": "0x8000"
+        },
+        {
+          "path": "https://raw.githubusercontent.com/KEI4251/ESP32-Jammer-/main/BIN/ESP32_JAMMER_BY_KEI2.ino.bin",
+          "offset": "0x10000"
+        }
+      ]
     }
-  }
-  
+  ]
+}
